--- a/css/styles.css
+++ b/css/styles.css
@@ -2,6 +2,7 @@
     margin: 0px auto;
     padding: 0px auto;
 }
+
 .row-content {
     margin: 0px auto;
 padding: 50px 0px 50px 0px;
@@ -23,4 +24,11 @@ color: floralwhite;
     font-size: 80%;
     margin: 0px;
     color: #0F0F0f;
+}
+body {
+    padding: 50px 0px 0px 0px;
+    z-index: 0;
+}
+.navbar-dark {
+    background: #512DA8;
 }
