--- a/css/styles.css
+++ b/css/styles.css
@@ -54,3 +54,11 @@ body {
     left:0;
     min-height:300px;
 }
+#carouselbuttons {
+    right: 0px;
+    bottom: 0px;
+    position: absolute;
+}
+.bgbtnbg{
+    background: #512DA8;
+}
