--- a/css/styles.less
+++ b/css/styles.less
@@ -1,4 +1,5 @@
 @lt-gray: #ddd;
+@floral-white: floralwhite;
 @background-dark: #512DA8;
 @background-light: #9575CD;
 @background-pale: #D1C4E9;
@@ -73,4 +74,22 @@ body {
 }
 .bgbtnbg{
     background: #512DA8;
+}
+.modal
+{border-left:0px;
+    border-bottom: 0px; 
+    .modal-header
+    {
+        background:@background-dark;
+        color: @floral-white;
+        #closemodal{
+            color: @floral-white;
+        }
+    }
+    .modal-body
+    {
+        background: @background-light;
+        color:@floral-white;
+    }
+
 }
