--- a/css/styles.less
+++ b/css/styles.less
@@ -76,9 +76,8 @@ body {
     background: #512DA8;
 }
 .modal
-{border-left:0px;
-    border-bottom: 0px; 
-    .modal-header
+{
+     .modal-header
     {
         background:@background-dark;
         color: @floral-white;
@@ -91,5 +90,10 @@ body {
         background: @background-light;
         color:@floral-white;
     }
-
+    .modal-content
+    {
+        border-left:0px;
+    border-bottom: 0px; 
+   
+    }
 }
